<resources>
    <string name="app_name">京东获取cookie</string>
    <string name="add_btn_text">添加</string>
    <string name="del_btn_text">删除</string>
    <string name="input_btn_text">输入</string>
    <string name="get_cookie_btn_text">获取CK</string>
    <string name="clear_cookie_btn_text">重置</string>
    <string name="confirm_btn_text">添加</string>
    <string name="ql_login_name">青龙面板登录</string>
    <string name="ql_address_text">青龙地址：</string>
    <string name="ql_username_text">用户名：</string>
    <string name="ql_password_text">密码：</string>
    <string name="ql_token_text">token：</string>
    <string name="ql_login_btn_text">登录</string>
    <string name="ql_cancel_btn_text">取消</string>
    <string name="ql_old_version_text">老版本</string>
</resources>