<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              tools:context=".activity.LoginActivity" app:layoutDescription="@xml/activity_phone_scene">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="0dp"
                      android:layout_weight="1.0"
                      android:layout_height="wrap_content"
                      android:gravity="right"
                      android:text="@string/ql_address_text"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3.0"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/addressText"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="0dp"
                      android:layout_weight="1.0"
                      android:layout_height="wrap_content"
                      android:gravity="right"
                      android:text="@string/ql_username_text"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3.0"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/usernameText"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="0dp"
                      android:layout_weight="1.0"
                      android:layout_height="wrap_content"
                      android:gravity="right"
                      android:text="@string/ql_password_text"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3.0"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordText"
            />
        </LinearLayout>
        <CheckBox android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/oldVersionCheckBox"
                  android:text="@string/ql_old_version_text" android:clickable="true" android:checked="true"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="@string/ql_login_btn_text"
                    android:id="@+id/loginBtn"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
            />
            <Button android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="@string/ql_cancel_btn_text"
                    android:id="@+id/cancelBtn"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>